# term

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
.github/workflows/: build.yml
scripts/: smoke.mjs  tauri-android-build.mjs
server/: index.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Composer.tsx  ConnectionPanel.tsx  FileExplorer.tsx  TerminalPanel.tsx
src/components/ui/: Button.tsx  Input.tsx  SegmentedControl.tsx  index.ts
src/lib/: api.ts  format.ts  payload.ts
src/styles/: app.css
src/types/: domain.ts
